--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-With all this talk of "graceful browser degredation" who is speaking for the other side? With this plugin, visitors still using Internet Explorer 6 get the experience their browser demands.
+With all this talk of "graceful browser degradation" who is speaking for the other side? With this plugin, visitors still using Internet Explorer 6 get the experience their browser demands.
 
 Current features:
 
